--- a/styes.css
+++ b/styes.css
@@ -15,17 +15,35 @@
     margin: 0;
   }
   nav {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    height: 50px;
-    background-color: #FFD65D;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: #333;
   }
   nav button {
     border: none;
     padding: 10px 20px;
     font-size: 16px;
     cursor: pointer;
+  }
+  nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+  }
+  
+  nav li {
+    margin: 0 10px;
+  }
+  
+  nav a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 36px;
+    display: block;
   }
   .home-page {
     position: relative;
@@ -103,4 +121,15 @@
     color: white;
     }
     
-    
+    #myButton {
+        background-color: #FFD65D;
+        color: white;
+        border: none;
+        padding: 10px 20px;
+        font-size: 16px;
+        cursor: pointer;
+        }
+        
+        #myButton:hover {
+        background-color: #FFD65D;
+        }
