--- a/style.css
+++ b/style.css
@@ -51,6 +51,10 @@ header nav ul li .book-table-btn {
   border-radius: 5px;
   cursor: pointer;
   transition: all 0.5s;
+  -webkit-transition:;
+  -moz-transition:;
+  -ms-transition:;
+  -o-transition:;
 }
 
 header nav ul li .book-table-btn:hover {
@@ -201,6 +205,14 @@ footer p {
   border-left: 15px solid #fff;
   z-index: 100;
   transition: all 400ms cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  -webkit-transform:;
+  -moz-transform:;
+  -ms-transform:;
+  -o-transform:;
+  -webkit-transition:;
+  -moz-transition:;
+  -ms-transition:;
+  -o-transition:;
 }
 
 .about .play-btn::before {
@@ -210,7 +222,7 @@ footer p {
   height: 120px;
   -webkit-animation-delay: 0s;
   animation-delay: 0s;
-  -webkit-animation: pulsate-btn 2s;
+  -webkit-animation:;
   animation: pulsate-btn 2s;
   -webkit-animation-direction: forwards;
   animation-direction: forwards;
