--- a/style.css
+++ b/style.css
@@ -1,28 +1,76 @@
+html{
+  height: 100%;
+  width: 100%;
+}
+* {
+  box-sizing: border-box;
+}
+
 /* Global styles */
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 16px;
   line-height: 1.5;
   color: #222;
 }
 
 a {
-  color: #333;
   text-decoration: none;
-}
+  color: #ffb03b;}
 
 a:hover {
   color: #0078d7;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Satisfy", cursive;
+}
+
+.header h1 {
+  padding-top: 5px;
+  font-size: 50%;
+  font-family: "Poppins", sans-serif;
+}
+
+.header {
+ background-color: rgba(255, 255, 255, 0.5);
+ padding: 5px;
+ font-family: "Poppins", sans-serif;
+ text-align: right;
+ font-size: 25px;
+}
+
+#navbarNav {
+  top: 0;
+  width: 100%;
+  z-index: 999;
+  background-color: transparent;
+  background: transparent;
+  padding: 1em;
+  margin: 0;
+}
+
 /* Navigation styles */
-.navbar {
-  background-color: #e7bc50;
+#navbarNav.navbar-transparent {
+  background: transparent;
+}
+
+#navbarNav.navbar-scrolled {
+  top: 40px;
+}
+
+.navbarNav {
+  font-family: "Poppins", sans-serif;
 }
 
 .navbar-brand {
   font-weight: 600;
-  font-size: 20px;
+  font-size: 50px;
+  font-family: "Satisfy", cursive;
+}
+
+ul {
+  list-style-type: none;
 }
 
 /* Home page styles */
@@ -63,8 +111,14 @@ label {
 
 /* Contact page styles */
 #map {
+  position: relative;
   width: 100%;
-  height: 400px;
+  height: 500px;
+  max-width: 800px;
+  top: 50px;
+  bottom: 0;
+  left: 200px;
+  right: 0;
 }
 
 /* Hours page styles */
@@ -116,24 +170,84 @@ label {
 .transparent-btn, #menu-btn {
   background-color: transparent;
   border: 2px solid;
-  padding: 10px 20px;
+  padding: 10px 15px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 12px;
   margin: 4px 2px;
   cursor: pointer;
   opacity: 0.8;
   color: whitesmoke;
+  width: 80%;
 }
 .transparent-btn:hover, #menu-btn:hover {
   color: #ff6f61; /* Hover color */
 }
 .carousel-caption {
    position: absolute;
-  bottom: none;
-  left: none;
-  right: none;
+  bottom: 10%;
+  left: 10%;
+  right: 10%;
   margin: auto;
 }
+.caption-heading {
+  font-size: 2.4em;
+  padding-bottom: 5px;
+}
 
+.caption-paragraph {
+  font-size: 1em;
+  padding-bottom: 5px;
+}
+
+
+.leftcolumn {
+  float: left;
+  width: 75%;
+  background-color: #616060;
+}
+
+/* Right column */
+.rightcolumn {
+  float: right;
+  width: 25%;
+  background-color: #616060;
+  padding-left: 20px;
+}
+card {
+  background-color: white;
+  padding: 20px;
+  margin-top: 20px;
+}
+row:after {
+  content: "";
+  display: table;
+}
+
+.back-to-top {
+  position: fixed;
+  visibility: hidden;
+  opacity: 0;
+  right: 15px;
+  bottom: 15px;
+  z-index: 996;
+  background: #ffb03b;
+  width: 40px;
+  height: 40px;
+  border-radius: 50px;
+  transition: all 0.4s;
+}
+
+.text {
+  top: 100px;
+}
+
+/* Footer */
+.footer {
+  padding: 20px;
+  font-family: 'Courgette', cursive;
+  text-align: center;
+  background: #ffb03b;
+  margin-top: 20px;
+}
